# quantlib-forge

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
.github/workflows/: barrier-forge-patched.yml  barrier-forge-unpatched.yml  benchmark-baseline.yml  benchmark-forge.yml  benchmark-xad.yml  ci-test-quantlib.yml  ci-test.yml  ci.yml  minimal-cdf-test.yml
benchmarks/: swap_xva_baseline.cpp  swap_xva_forge.cpp  swap_xva_forge_all.cpp  swap_xva_forge_avx_patched.cpp  swap_xva_forge_only_forward.cpp  swap_xva_xad.cpp
cmake/: QuantLib-ForgeConfig.cmake.in
docs/benchmarkResults/: barrier-patched.txt  barrier-unpatched.txt  benchmark-baseline.txt  benchmark-forge.txt  benchmark-xad.txt
expressions/: CMakeLists.txt  Config.hpp.in  Exceptions.hpp  Expression.hpp  Literals.hpp  Macros.hpp  README.md  Traits.hpp  abool.hpp  abool_helpers.hpp
expressions/Compatibility/: Complex.hpp  MathFunctions.hpp  StdCompatibility.hpp
expressions/ExpressionTemplates/: BinaryDerivativeImpl.hpp  BinaryExpr.hpp  BinaryFunctors.hpp  BinaryMathFunctors.hpp  BinaryOperatorMacros.hpp  BinaryOperators.hpp  UnaryExpr.hpp  UnaryFunctors.hpp  UnaryMathFunctors.hpp  UnaryOperatorMacros.hpp  UnaryOperators.hpp
forge-test-suite/: CMakeLists.txt  americanoption_forge.cpp  barrieroption_forge.cpp  barrieroption_forge_abool.cpp  batesmodel_forge.cpp  bermudanswaption_forge.cpp  bonds_forge.cpp  creditdefaultswap_forge.cpp  europeanoption_forge.cpp  forwardrateagreement_forge.cpp  hestonmodel_forge.cpp  quantlibtestsuite_forge.cpp  swap_forge.cpp  toplevelfixture.hpp  utilities_forge.cpp  utilities_forge.hpp
patches/: quantlib-abool.patch
patches/quantlib/: quantlib-analyticbarrierengine.cpp.patch  quantlib-errorfunction.cpp.patch  quantlib-errorfunction.hpp.patch  quantlib-normaldistribution.cpp.patch  quantlib-normaldistribution.hpp.patch
ql/: CMakeLists.txt  qlforge.hpp
scripts/local-docker/: local-barrier-forge-patched.ps1  local-barrier-forge-unpatched.ps1  local-benchmark-baseline.ps1  local-benchmark-forge.ps1  local-benchmark-xad.ps1  local-ci-build.ps1  local-ci-test-quantlib.ps1  local-ci-test.ps1  local-test-minimal-cdf.ps1
scripts/local-windows/: local-ci-build.ps1  local-ci-test-quantlib.ps1  local-ci-test.ps1
test-suite/: CMakeLists.txt  quantlibtestsuite_forge.cpp  swap_xva.cpp  toplevelfixture.hpp  utilities_forge.cpp  utilities_forge.hpp
tests/: cumulative_normal_distribution.hpp  cumulative_normal_distribution_forge.hpp  error_function.hpp  error_function_forge.hpp  minimal_cdf_test.cpp  minimal_g2_test.cpp
